--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "cors-anywhere": "^0.4.4",
     "rxjs": "^7.8.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.13.0"
