--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,7 +14,7 @@ RUN apk add --no-cache postgresql-client && \
     npm install pg pg-hstore && \
     npm install bcryptjs jsonwebtoken express-jwt joi && \
     npm install nodemailer swagger-ui-express yamljs && \
-    npm install --save-dev nodemon && \
+    npm install --save-dev nodemon
 
 # Copy the entire backend directory
 COPY . .
